--- a/layouts/partials/important-dates.html
+++ b/layouts/partials/important-dates.html
@@ -11,11 +11,11 @@
     <div class="what-now">
     <h2>What now?</h2>
 
-    <a href="" class="btn session">Submit Session</a>
-    <a href="" class="btn vote">Vote on Session(s)</a>
+    <a href="/submit-a-session" class="btn session">Submit Session</a>
+    <!--<a href="" class="btn vote">Vote on Session(s)</a>
     <span></span>
     <a href="" class="btn book">Book Now</a>
-    <a href="" class="btn">Contact Us</a>
+    <a href="" class="btn">Contact Us</a>-->
     </div>
   </div>
 </section>
