Preparing the site for initial launch

--- a/layouts/partials/important-dates.html
+++ b/layouts/partials/important-dates.html
@@ -8,14 +8,14 @@
 
     <div class="clear"></div>
 
-    <div class="what-now">
-    <h2>What now?</h2>
+    <!--<div class="what-now">
+      <h2>What now?</h2>
 
-    <a href="/submit-a-session" class="btn session">Submit Session</a>
-    <!--<a href="" class="btn vote">Vote on Session(s)</a>
-    <span></span>
-    <a href="" class="btn book">Book Now</a>
-    <a href="" class="btn">Contact Us</a>-->
-    </div>
+      <a href="/submit-a-session" class="btn session">Submit Session</a>
+      <a href="" class="btn vote">Vote on Session(s)</a>
+      <span></span>
+      <a href="" class="btn book">Book Now</a>
+      <a href="" class="btn">Contact Us</a>
+    </div>-->
   </div>
 </section>
