--- a/layouts/partials/event-details-right.html
+++ b/layouts/partials/event-details-right.html
@@ -6,5 +6,5 @@
     <li>Industry-leading Presenters</li>
     <li>Only {{.Site.Data.event.price}}</li>
   </ul>
-  <a class="btn">Read More</a>
+  <!--<a class="btn">Read More</a>-->
 </div>
