--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -40,6 +40,7 @@
 <script src="{{ "js/countdown.js" | absURL }}"></script>
 <script src="{{ "js/slick.min.js" | absURL }}"></script>
 <script src="{{ "js/site.js" | absURL }}"></script>
+<script src="https://www.google.com/recaptcha/api.js"></script>
 
 <script>
   $(document).ready(function(){
