Adding captcha message

--- a/layouts/session-submission/single.html
+++ b/layouts/session-submission/single.html
@@ -54,6 +54,7 @@
                 <li>
                   <label></label>
                   <div class="g-recaptcha" data-sitekey="6LezOSEUAAAAAFBSycA2Wm8j-UKqhSEi1rBM9F-o"></div>
+                  <small><em>Please ensure reCAPTCHA verification is successful before submitting</em></small>
                 </li>
                 <li><input type="submit" value="Submit" /></li>
               </ul>
