--- a/layouts/session-submission/single.html
+++ b/layouts/session-submission/single.html
@@ -55,6 +55,7 @@
                   <label></label>
                   <div class="g-recaptcha" data-sitekey="6LezOSEUAAAAAFBSycA2Wm8j-UKqhSEi1rBM9F-o"></div>
                   <small><em>Please ensure reCAPTCHA verification is successful before submitting</em></small>
+                  <img src="https://dddmelb.azurewebsites.net/Content/images/p.gif" />
                 </li>
                 <li><input type="submit" value="Submit" /></li>
               </ul>
