--- a/layouts/partials/sponsors.html
+++ b/layouts/partials/sponsors.html
@@ -1,24 +1,24 @@
-{{ if $.Site.Data.sponsors.platinum or $.Site.Data.sponsors.gold or $.Site.Data.sponsors.silver }}
-<section class="sponsors">
-{{ if $.Site.Data.sponsors.platinum }}
-  <h2>Platinum Sponsor</h2>
-  {{ range $.Site.Data.sponsors.platinum }}
-    <a href="{{.url}}" target="_blank"><img src="/images/sponsors/{{.img}}" alt="{{.text}}" /></a>
+{{ if or ($.Site.Data.sponsors.platinum) ($.Site.Data.sponsors.gold) ($.Site.Data.sponsors.silver) }}
+  <section class="sponsors">
+  {{ if $.Site.Data.sponsors.platinum }}
+    <h2>Platinum Partner</h2>
+    {{ range $.Site.Data.sponsors.platinum }}
+      <a href="{{.url}}" class="targetBlank"><img src="/images/sponsors/{{.img}}" alt="{{.text}}" /></a>
+    {{ end }}
   {{ end }}
-{{ end }}
 
-{{ if $.Site.Data.sponsors.gold }}
-  <h2>Gold Sponsors</h2>
-  {{ range $.Site.Data.sponsors.gold }}
-    <a href="{{.url}}" target="_blank"><img src="/images/sponsors/{{.img}}" alt="{{.text}}" /></a>
+  {{ if $.Site.Data.sponsors.gold }}
+    <h2>Gold Sponsors</h2>
+    {{ range $.Site.Data.sponsors.gold }}
+      <a href="{{.url}}" class="targetBlank"><img src="/images/sponsors/{{.img}}" alt="{{.text}}" /></a>
+    {{ end }}
   {{ end }}
-{{ end }}
 
-{{ if $.Site.Data.sponsors.silver }}
-  <h2>Silver Sponsors</h2>
-  {{ range $.Site.Data.sponsors.silver }}
-    <a href="{{.url}}" target="_blank"><img src="/images/sponsors/{{.img}}" alt="{{.text}}" /></a>
+  {{ if $.Site.Data.sponsors.silver }}
+    <h2>Silver Sponsors</h2>
+    {{ range $.Site.Data.sponsors.silver }}
+      <a href="{{.url}}" class="targetBlank"><img src="/images/sponsors/{{.img}}" alt="{{.text}}" /></a>
+    {{ end }}
   {{ end }}
-{{ end }}
-</section>
+  </section>
 {{ end }}
