--- a/layouts/session-submission/single.html
+++ b/layouts/session-submission/single.html
@@ -5,7 +5,7 @@
         <div class="col-xs-12 col-sm-7 col-md-7 col-sm-8 left-col">
           <h1>{{ .Title }}</h1>
           {{ .Content }}
-          <form action="https://dddmelb.azurewebsites.net/add-session" method="post" role="form" data-toggle="validator">
+          <form class="captcha-form" action="https://dddmelb.azurewebsites.net/add-session" method="post" role="form" data-toggle="validator" data-disable="false">
             <fieldset>
               <ul>
                 <li class="form-group">
@@ -53,7 +53,7 @@
                 </li>
                 <li>
                   <label></label>
-                  <div class="g-recaptcha" data-sitekey="6LezOSEUAAAAAFBSycA2Wm8j-UKqhSEi1rBM9F-o"></div>
+                  <div class="g-recaptcha" data-sitekey="6LezOSEUAAAAAFBSycA2Wm8j-UKqhSEi1rBM9F-o" data-callback="recaptchaComplete"></div>
                   <small><em>Please ensure reCAPTCHA verification is successful before submitting</em></small>
                   <img src="https://dddmelb.azurewebsites.net/Content/images/p.gif" />
                 </li>
