General site tweaks for session listing

--- a/layouts/partials/event-details.html
+++ b/layouts/partials/event-details.html
@@ -18,7 +18,7 @@
           <p><span>Cost</span>{{.Site.Data.event.price}}</p>
         </div>
         <div class="col-xs-12 col-sm-4 col-md-4">
-          <!--<a href="#" class="btn">Read More</a>-->
+          <a href="/about/" class="btn">Read More</a>
         </div>
       </div>
     </div>
