--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -18,4 +18,8 @@ input[type="submit"]:disabled {
   background-color: #d3d3d3;
 }
 
+.sponsors.grey > a {
+  margin: 0 15px 0 15px;
+}
+
 /*font size in menu @ 768*/
