--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -18,7 +18,7 @@ input[type="submit"]:disabled {
   background-color: #d3d3d3;
 }
 
-.sponsors.grey > a {
+.sponsors > a {
   margin: 0 15px 0 15px;
 }
 
