--- a/layouts/partials/sponsors.html
+++ b/layouts/partials/sponsors.html
@@ -14,6 +14,14 @@
     {{ end }}
   {{ end }}
 
+  {{ if $.Site.Data.sponsors.community }}
+    <h2>Community Sponsors</h2>
+    {{ range $.Site.Data.sponsors.community }}
+      <a href="{{.url}}" class="targetBlank"><img src="/images/sponsors/{{.img}}" alt="{{.text}}" /></a>
+    {{ end }}
+  {{ end }}
+
+
   {{ if $.Site.Data.sponsors.silver }}
     <h2>Silver Sponsors</h2>
     {{ range $.Site.Data.sponsors.silver }}
