--- a/layouts/partials/sponsors.html
+++ b/layouts/partials/sponsors.html
@@ -7,20 +7,19 @@
     {{ end }}
   {{ end }}
 
+  {{ if $.Site.Data.sponsors.community }}
+    <h2>Community Partner</h2>
+    {{ range $.Site.Data.sponsors.community }}
+      <a href="{{.url}}" class="targetBlank"><img src="/images/sponsors/{{.img}}" alt="{{.text}}" /></a>
+    {{ end }}
+  {{ end }}
+
   {{ if $.Site.Data.sponsors.gold }}
     <h2>Gold Sponsors</h2>
     {{ range $.Site.Data.sponsors.gold }}
       <a href="{{.url}}" class="targetBlank"><img src="/images/sponsors/{{.img}}" alt="{{.text}}" /></a>
     {{ end }}
   {{ end }}
-
-  {{ if $.Site.Data.sponsors.community }}
-    <h2>Community Sponsors</h2>
-    {{ range $.Site.Data.sponsors.community }}
-      <a href="{{.url}}" class="targetBlank"><img src="/images/sponsors/{{.img}}" alt="{{.text}}" /></a>
-    {{ end }}
-  {{ end }}
-
 
   {{ if $.Site.Data.sponsors.silver }}
     <h2>Silver Sponsors</h2>
