--- a/layouts/partials/sponsors.html
+++ b/layouts/partials/sponsors.html
@@ -1,15 +1,8 @@
-{{ if or ($.Site.Data.sponsors.platinum) ($.Site.Data.sponsors.gold) ($.Site.Data.sponsors.silver) }}
+{{ if or ($.Site.Data.sponsors.platinum) ($.Site.Data.sponsors.gold) ($.Site.Data.sponsors.silver) ($.Site.Data.sponsors.community) }}
   <section class="sponsors">
   {{ if $.Site.Data.sponsors.platinum }}
     <h2>Platinum Partner</h2>
     {{ range $.Site.Data.sponsors.platinum }}
-      <a href="{{.url}}" class="targetBlank"><img src="/images/sponsors/{{.img}}" alt="{{.text}}" /></a>
-    {{ end }}
-  {{ end }}
-
-  {{ if $.Site.Data.sponsors.community }}
-    <h2>Community Partner</h2>
-    {{ range $.Site.Data.sponsors.community }}
       <a href="{{.url}}" class="targetBlank"><img src="/images/sponsors/{{.img}}" alt="{{.text}}" /></a>
     {{ end }}
   {{ end }}
@@ -24,6 +17,13 @@
   {{ if $.Site.Data.sponsors.silver }}
     <h2>Silver Sponsors</h2>
     {{ range $.Site.Data.sponsors.silver }}
+      <a href="{{.url}}" class="targetBlank"><img src="/images/sponsors/{{.img}}" alt="{{.text}}" /></a>
+    {{ end }}
+  {{ end }}
+
+  {{ if $.Site.Data.sponsors.community }}
+    <h2>Community Partners</h2>
+    {{ range $.Site.Data.sponsors.community }}
       <a href="{{.url}}" class="targetBlank"><img src="/images/sponsors/{{.img}}" alt="{{.text}}" /></a>
     {{ end }}
   {{ end }}
