--- a/layouts/partials/important-date.html
+++ b/layouts/partials/important-date.html
@@ -1,4 +1,4 @@
-<div class="imp-date {{.type}}">
+<div class="imp-date {{.type}}{{ if .done }} done{{end}}">
   <h3>{{dateFormat "Monday" .date}} <strong>{{dateFormat "January 2" .date}}</strong></h3>
   <p>
     <strong>{{dateFormat "15:04" .date}}</strong>
