--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -1433,6 +1433,12 @@ ul.accordion {
     margin: 0;
     display: inline;
     cursor: pointer;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
   }
 
   .session-title {
