--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -501,6 +501,7 @@ ul.accordion {
     .info {font-size: 18px; line-height: 1.3}
     .area {position: absolute; top: 10px; left: 15px; right: 15px;}
     .speaker {position: absolute; bottom: 10px; left: 15px; right: 15px;}
+    .abstract {display: none;}
   }
   a.col:hover {background: @primary-color; color: #fff; text-decoration: none}
 
@@ -594,8 +595,104 @@ ul.accordion {
 
 .scrollbar-inner>.scroll-element .scroll-bar {background: @primary-color; .opacity(1)}
 
+// Sessions and Voting
+.submitted-session {
+  background: #f0f0f0;
+  border-right: 7px solid #ff9600;
+  padding: 10px 15px 2px;
+  margin-bottom: 10px;
 
+  h3 {
+    margin: 0;
+    display: inline;
+    cursor: pointer;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
 
+  .session-title {
+    margin-bottom: 10px;
+
+    h3:after {
+      content: "\f0d7";
+      font-family: "FontAwesome";
+      color: #000; .opacity(0.3);
+      display: inline-block;
+      margin: 0 0 0 10px;
+      font-size: 24px;
+      max-width: 26px;
+      vertical-align: middle;
+      position: relative;
+      top: -2px;
+    }
+
+    .vote-for-session {
+      float: right;
+      padding: 3px 20px;
+      margin-left: 5px;
+    }
+  }
+
+  .session-content {
+    display: none;
+
+    p {
+      margin: 18px 0;
+    }
+  }
+
+  &.open {
+    .session-title {
+      h3:after {
+        content: "\f0d8";
+      }
+    }
+
+    .session-content {
+      display: block;
+    }
+  }
+}
+
+#submit-votes {
+  margin: 0 0 10px 0;
+  padding: 0;
+  background-color: #f0f0f0;
+  left: 0;
+  right: 0;
+  z-index: 10;
+
+  h3 {
+    margin: 10px 0 0 0;
+    text-align: center;
+  }
+
+  li.form-group {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  li.submit input {
+    margin-top: 0px;
+  }
+
+  form {
+    padding: 10px;
+  }
+}
+
+#submit-votes.affix {
+  top: 0;
+  position: fixed;
+
+  + .submitted-session {
+    margin-top: 220px;
+  }
+}
 
 
 @media only screen and (min-width: 360px) {
@@ -618,8 +715,6 @@ ul.accordion {
 }
 
 
-
-
 // Mobile Portrait Only
 @media only screen and (max-width: 480px) {
   .blog-photo {margin-bottom: 10px; min-width: 100px}
@@ -629,8 +724,6 @@ ul.accordion {
     margin-top: 183px !important;
   }
 }
-
-
 
 
 //  Mobile Landscape (From 480px)
@@ -708,10 +801,6 @@ ul.accordion {
     margin-top: 186px !important;
   }
 }
-
-
-
-
 
 
 //  Small devices (tablets, 768px and up)
@@ -1248,7 +1337,6 @@ ul.accordion {
 }
 
 
-
 //  Ex Large devices (large desktops, 1200px and up)
 @media only screen and (min-width: 1400px) {
   .btn {
@@ -1419,104 +1507,4 @@ ul.accordion {
     }
   }
 
-}
-
-// Sessions and Vote
-
-.submitted-session {
-  background: #f0f0f0;
-  border-right: 7px solid #ff9600;
-  padding: 10px 15px 2px;
-  margin-bottom: 10px;
-
-  h3 {
-    margin: 0;
-    display: inline;
-    cursor: pointer;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-
-  .session-title {
-    margin-bottom: 10px;
-
-    h3:after {
-      content: "\f0d7";
-      font-family: "FontAwesome";
-      color: #000; .opacity(0.3);
-      display: inline-block;
-      margin: 0 0 0 10px;
-      font-size: 24px;
-      max-width: 26px;
-      vertical-align: middle;
-      position: relative;
-      top: -2px;
-    }
-
-    .vote-for-session {
-      float: right;
-      padding: 3px 20px;
-      margin-left: 5px;
-    }
-  }
-
-  .session-content {
-    display: none;
-
-    p {
-      margin: 18px 0;
-    }
-  }
-
-  &.open {
-    .session-title {
-      h3:after {
-        content: "\f0d8";
-      }
-    }
-
-    .session-content {
-      display: block;
-    }
-  }
-}
-
-#submit-votes {
-  margin: 0 0 10px 0;
-  padding: 0;
-  background-color: #f0f0f0;
-  left: 0;
-  right: 0;
-  z-index: 10;
-
-  h3 {
-    margin: 10px 0 0 0;
-    text-align: center;
-  }
-
-  li.form-group {
-    width: 100%;
-    margin-bottom: 10px;
-  }
-
-  li.submit input {
-    margin-top: 0px;
-  }
-
-  form {
-    padding: 10px;
-  }
-}
-
-#submit-votes.affix {
-  top: 0;
-  position: fixed;
-
-  + .submitted-session {
-    margin-top: 220px;
-  }
 }
