--- a/layouts/agenda/single.html
+++ b/layouts/agenda/single.html
@@ -26,7 +26,7 @@
 
           <div class="agenda-list equal-heights">
             <h3>09:00 - 09:45</h3>
-            <a class="col room2" href="" data-toggle="modal" data-target="#modal1" style="height: 206.646px;">
+            <a class="col room2" href="#" data-toggle="modal" data-target="#agenda-modal">
               <span class="area">Room 2</span>
               <span class="info">Keynote - The Future is Awesome (and what you can do about it)</span>
               <span class="speaker">Paul Fenwick</span>
@@ -39,7 +39,7 @@
 
           <div class="agenda-list equal-heights">
             <h3>09:45 - 10:00</h3>
-            <div class="col room2" style="height: 155.979px;">
+            <div class="col room2">
               <span class="area">Room 2</span>
               <span class="info">Morning Tea</span>
               <span class="speaker"></span>
@@ -48,156 +48,42 @@
 
           <div class="agenda-list equal-heights">
             <h3>10:00 - 10:45</h3>
-            <a class="col room1" href="" data-toggle="modal" data-target="#modal2" style="height: 206.646px;">
+            <a class="col room1" href="" data-toggle="modal" data-target="#agenda-modal">
               <span class="area">Room 1</span>
               <span class="info">Recapping C# 6 and a first look into C# 7</span>
               <span class="speaker">Pratik Khasnabis</span>
+              <span class="abstract"><p>Things</p></span>
             </a>
-            <!-- Begin Modal -->
-            <div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-              <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                <h4 class="modal-title" id="myModalLabel">Room 1: Recapping C# 6 and a first look into C# 7</h4>
-                <p>Pratik Khasnabis</p>
-                </div>
-                <div class="modal-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu nibh et sem ultrices pulvinar. Nam velit nibh, maximus sit amet dapibus eu, ullamcorper eu leo. Vestibulum augue nunc, vestibulum feugiat lorem eget, interdum dapibus neque. Ut et mauris at mi congue vestibulum tempor ac ex. Duis fermentum velit a faucibus vehicula. Maecenas vel egestas odio.</p>
-                <p>Aenean est justo, mattis quis faucibus tincidunt, dapibus in nulla. Nulla facilisi. Suspendisse pellentesque lacus a mi aliquam congue. Nunc interdum nibh quis eros dapibus, id rutrum magna tincidunt. Maecenas turpis arcu, auctor ut accumsan vel, venenatis ac elit. Cras ut est vestibulum, ultrices leo et, egestas lacus. Vivamus at lorem a lorem euismod iaculis. Etiam ac condimentum est.</p>
-                </div>
-                <div class="modal-footer">
-                <a href="" class="btn">Book Now</a>
-                </div>
-              </div>
-              </div>
-            </div>
-            <!-- /End Modal -->
-            <a class="col room2" href="" data-toggle="modal" data-target="#modal3" style="height: 206.646px;">
+
+            <a class="col room2" href="" data-toggle="modal" data-target="#agenda-modal">
               <span class="area">Room 2</span>
               <span class="info">Thinking in React</span>
               <span class="speaker">Mohammad Helmy</span>
             </a>
-            <!-- Begin Modal -->
-            <div class="modal fade" id="modal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-              <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                <h4 class="modal-title" id="myModalLabel">Room 2: Thinking in React</h4>
-                <p>Mohammad Helmy</p>
-                </div>
-                <div class="modal-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu nibh et sem ultrices pulvinar. Nam velit nibh, maximus sit amet dapibus eu, ullamcorper eu leo. Vestibulum augue nunc, vestibulum feugiat lorem eget, interdum dapibus neque. Ut et mauris at mi congue vestibulum tempor ac ex. Duis fermentum velit a faucibus vehicula. Maecenas vel egestas odio.</p>
-                <p>Aenean est justo, mattis quis faucibus tincidunt, dapibus in nulla. Nulla facilisi. Suspendisse pellentesque lacus a mi aliquam congue. Nunc interdum nibh quis eros dapibus, id rutrum magna tincidunt. Maecenas turpis arcu, auctor ut accumsan vel, venenatis ac elit. Cras ut est vestibulum, ultrices leo et, egestas lacus. Vivamus at lorem a lorem euismod iaculis. Etiam ac condimentum est.</p>
-                </div>
-                <div class="modal-footer">
-                <a href="" class="btn">Book Now</a>
-                </div>
-              </div>
-              </div>
-            </div>
-            <!-- /End Modal -->
-            <a class="col room3" href="" data-toggle="modal" data-target="#modal4" style="height: 206.646px;">
+
+            <a class="col room3" href="" data-toggle="modal" data-target="#agenda-modal">
               <span class="area">Room 3</span>
               <span class="info">Building a conversational user interface</span>
               <span class="speaker">Norman Noble</span>
             </a>
-            <!-- Begin Modal -->
-            <div class="modal fade" id="modal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-              <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                <h4 class="modal-title" id="myModalLabel">Room 3: Building a conversational user interface</h4>
-                <p>Norman Noble</p>
-                </div>
-                <div class="modal-body">
-                <p>Aenean est justo, mattis quis faucibus tincidunt, dapibus in nulla. Nulla facilisi. Suspendisse pellentesque lacus a mi aliquam congue. Nunc interdum nibh quis eros dapibus, id rutrum magna tincidunt. Maecenas turpis arcu, auctor ut accumsan vel, venenatis ac elit. Cras ut est vestibulum, ultrices leo et, egestas lacus. Vivamus at lorem a lorem euismod iaculis. Etiam ac condimentum est. Proin eu nibh et sem ultrices pulvinar. Nam velit nibh, maximus sit amet dapibus eu, ullamcorper eu leo. Vestibulum augue nunc, vestibulum feugiat lorem eget, interdum dapibus neque. Ut et mauris at mi congue vestibulum tempor ac ex. Duis fermentum velit a faucibus vehicula. Maecenas vel egestas odio.</p>
-                </div>
-                <div class="modal-footer">
-                <a href="" class="btn">Book Now</a>
-                </div>
-              </div>
-              </div>
-            </div>
-            <!-- /End Modal -->
-            <a class="col room4" href="" data-toggle="modal" data-target="#modal5" style="height: 206.646px;">
+
+            <a class="col room4" href="" data-toggle="modal" data-target="#agenda-modal">
               <span class="area">Room 4</span>
               <span class="info">Random Failures of Architecture I Have Committed</span>
               <span class="speaker">Colin Scott</span>
             </a>
-            <!-- Begin Modal -->
-            <div class="modal fade" id="modal5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-              <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                <h4 class="modal-title" id="myModalLabel">Room 4: Random Failures of Architecture I Have Committed</h4>
-                <p>Colin Scott</p>
-                </div>
-                <div class="modal-body">
-                <p>Proin eu nibh et sem ultrices pulvinar. Nam velit nibh, maximus sit amet dapibus eu, ullamcorper eu leo. Vestibulum augue nunc, vestibulum feugiat lorem eget, interdum dapibus neque. Ut et mauris at mi congue vestibulum tempor ac ex. Duis fermentum velit a faucibus vehicula. Maecenas vel egestas odio.</p>
-                <p>Aenean est justo, mattis quis faucibus tincidunt, dapibus in nulla. Nulla facilisi. Suspendisse pellentesque lacus a mi aliquam congue. Nunc interdum nibh quis eros dapibus, id rutrum magna tincidunt.</p>
-                </div>
-                <div class="modal-footer">
-                <a href="" class="btn">Book Now</a>
-                </div>
-              </div>
-              </div>
-            </div>
-            <!-- /End Modal -->
-            <a class="col room5" href="" data-toggle="modal" data-target="#modal6" style="height: 206.646px;">
+
+            <a class="col room5" href="" data-toggle="modal" data-target="#agenda-modal">
               <span class="area">Room 5</span>
               <span class="info">Workshop: Getting in deep with React (Part 1)</span>
               <span class="speaker">Aaron Powell</span>
             </a>
-            <!-- Begin Modal -->
-            <div class="modal fade" id="modal6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-              <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                <h4 class="modal-title" id="myModalLabel">Room 5: Workshop: Getting in deep with React (Part 1)</h4>
-                <p>Aaron Powell</p>
-                </div>
-                <div class="modal-body">
-                <p>Proin eu nibh et sem ultrices pulvinar. Nam velit nibh, maximus sit amet dapibus eu, ullamcorper eu leo. Vestibulum augue nunc, vestibulum feugiat lorem eget, interdum dapibus neque. Ut et mauris at mi congue vestibulum tempor ac ex. Duis fermentum velit a faucibus vehicula. Maecenas vel egestas odio.</p>
-                <p>Aenean est justo, mattis quis faucibus tincidunt, dapibus in nulla. Nulla facilisi. Suspendisse pellentesque lacus a mi aliquam congue. Nunc interdum nibh quis eros dapibus, id rutrum magna tincidunt.</p>
-                </div>
-                <div class="modal-footer">
-                <a href="" class="btn">Book Now</a>
-                </div>
-              </div>
-              </div>
-            </div>
-            <!-- /End Modal -->
-            <a class="col room6" href="" data-toggle="modal" data-target="#modal7" style="height: 206.646px;">
+
+            <a class="col room6" href="" data-toggle="modal" data-target="#agenda-modal">
               <span class="area">Room 6</span>
               <span class="info">Workshop: ASP.NET Core From Scratch (Part 1)</span>
               <span class="speaker">Shawn Wildermuth</span>
             </a>
-            <!-- Begin Modal -->
-            <div class="modal fade" id="modal7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-              <div class="modal-dialog" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                <h4 class="modal-title" id="myModalLabel">Room 6: Workshop: ASP.NET Core From Scratch (Part 1)</h4>
-                <p>Shawn Wildermuth</p>
-                </div>
-                <div class="modal-body">
-                <p>Proin eu nibh et sem ultrices pulvinar. Nam velit nibh, maximus sit amet dapibus eu, ullamcorper eu leo. Vestibulum augue nunc, vestibulum feugiat lorem eget, interdum dapibus neque. Ut et mauris at mi congue vestibulum tempor ac ex. Duis fermentum velit a faucibus vehicula. Maecenas vel egestas odio.</p>
-                <p>Aenean est justo, mattis quis faucibus tincidunt, dapibus in nulla. Nulla facilisi. Suspendisse pellentesque lacus a mi aliquam congue. Nunc interdum nibh quis eros dapibus, id rutrum magna tincidunt.</p>
-                <p>Proin eu nibh et sem ultrices pulvinar. Nam velit nibh, maximus sit amet dapibus eu, ullamcorper eu leo. Vestibulum augue nunc, vestibulum feugiat lorem eget, interdum dapibus neque. Ut et mauris at mi congue vestibulum tempor ac ex. Duis fermentum velit a faucibus vehicula. Maecenas vel egestas odio.</p>
-                </div>
-                <div class="modal-footer">
-                <a href="" class="btn">Book Now</a>
-                </div>
-              </div>
-              </div>
-            </div>
-            <!-- /End Modal -->
           </div>
 
           <div class="agenda-list equal-heights">
@@ -413,26 +299,18 @@
             </div>
           </div>
 
-          <!-- Begin Modal -->
-          <div class="modal fade" id="agenda-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal fade" id="agenda-modal" tabindex="-1" role="dialog" aria-labelledby="agenda-modal">
             <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-              <h4 class="modal-title" id="myModalLabel">Room 2: Keynote - The Future is Awesome (and what you can do about it)</h4>
-              <p>Paul Fenwick</p>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+                <h4 class="modal-title" id="agenda-modal"></h4>
+                <p class="speaker"></p>
               </div>
-              <div class="modal-body">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu nibh et sem ultrices pulvinar. Nam velit nibh, maximus sit amet dapibus eu, ullamcorper eu leo. Vestibulum augue nunc, vestibulum feugiat lorem eget, interdum dapibus neque. Ut et mauris at mi congue vestibulum tempor ac ex. Duis fermentum velit a faucibus vehicula. Maecenas vel egestas odio.</p>
-              <p>Aenean est justo, mattis quis faucibus tincidunt, dapibus in nulla. Nulla facilisi. Suspendisse pellentesque lacus a mi aliquam congue. Nunc interdum nibh quis eros dapibus, id rutrum magna tincidunt. Maecenas turpis arcu, auctor ut accumsan vel, venenatis ac elit. Cras ut est vestibulum, ultrices leo et, egestas lacus. Vivamus at lorem a lorem euismod iaculis. Etiam ac condimentum est.</p>
-              </div>
-              <div class="modal-footer">
-              <a href="" class="btn">Book Now</a>
-              </div>
+              <div class="modal-body"></div>
             </div>
             </div>
           </div>
-          <!-- /End Modal -->
 
         </div>
         <div class="col-xs-12 right-col">
