Making voting page live and turning off session submission

--- a/layouts/partials/important-dates.html
+++ b/layouts/partials/important-dates.html
@@ -11,11 +11,8 @@
     <div class="what-now">
       <h2>What now?</h2>
 
+      <a href="/vote/" class="btn vote">Vote on Session(s)</a>
       <a href="/tickets/" class="btn book">Purchase a Ticket</a>
-      <a href="/submit-a-session/" class="btn session">Submit Session</a>
-      <a href="/view-sessions/" class="btn vote">View Session(s)</a>
-      <!--<a href="" class="btn vote">Vote on Session(s)</a>-->
-      <!--<a href="" class="btn">Contact Us</a>-->
     </div>
   </div>
 </section>
