--- a/layouts/session-submission/single.html
+++ b/layouts/session-submission/single.html
@@ -5,7 +5,7 @@
         <div class="col-xs-12 col-sm-7 col-md-7 col-sm-8 left-col">
           <h1>{{ .Title }}</h1>
           {{ .Content }}
-          <form class="captcha-form" action="https://dddmelb.azurewebsites.net/add-session" method="post" role="form" data-toggle="validator" data-disable="false">
+          <!--<form class="captcha-form" action="https://dddmelb.azurewebsites.net/add-session" method="post" role="form" data-toggle="validator" data-disable="false">
             <fieldset>
               <ul>
                 <li class="form-group">
@@ -60,7 +60,7 @@
                 <li><input type="submit" value="Submit" /></li>
               </ul>
             </fieldset>
-          </form>
+          </form>-->
         </div>
         <div class="col-xs-12 col-sm-5 col-md-5 col-lg-4 right-col">
           <div class="inner">
