Adding the different room colours

--- a/src/less/colours-and-fonts.less
+++ b/src/less/colours-and-fonts.less
@@ -15,13 +15,13 @@
 @agenda: #bcd800;
 
 // Agenda
-@blue-room: #dd4876;
-@green-room: #ff9600;
-@orange-room: #00df88;
-@purple-room: #bcd800;
-@red-room: #ca3589;
-@registration-room: #35cab0;
-@yellow-room: #35cab0;
+@blue-room: #54a6d6;
+@green-room: #66ad4a;
+@orange-room: #cd9152;
+@purple-room: #9e55c0;
+@red-room: #ad4a54;
+@registration-room: #dd4876;
+@yellow-room: #e3d800;
 
 p.blue {color: #00a2ff}
 div.blue,
