Adding a nicer hover state to the agenda page

--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -505,16 +505,32 @@ ul.accordion {
     .website {display: none;}
     .abstract {display: none;}
   }
-  a.col:hover {background: @primary-color; color: #fff; text-decoration: none}
+  a.col:hover {
+    color: #fff;
+    text-decoration: none
+  }
 
   // Border Colours
   .col.blue-room {border-color: @blue-room}
+  a.col.blue-room:hover {background: @blue-room}
+
   .col.green-room {border-color: @green-room}
+  a.col.green-room:hover {background: @green-room}
+
   .col.orange-room {border-color: @orange-room}
+  a.col.orange-room:hover {background: @orange-room}
+
   .col.purple-room {border-color: @purple-room}
+  a.col.purple-room:hover {background: @purple-room}
+
   .col.red-room {border-color: @red-room}
+  a.col.red-room:hover {background: @red-room}
+
   .col.registration-room {border-color: @registration-room}
+  a.col.registration-room:hover {background: @registration-room}
+
   .col.yellow-room {border-color: @yellow-room}
+  a.col.yellow-room:hover {background: @yellow-room}
 }
 
 
