--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -339,6 +339,13 @@ footer {
     max-width: 120px !important;
     margin: 10px 15px 10px 15px;
   }
+
+  small {
+    display: block;
+    clear: both;
+    text-align: center;
+    color: #333;
+  }
 }
 
 
