--- a/src/less/colours-and-fonts.less
+++ b/src/less/colours-and-fonts.less
@@ -22,6 +22,8 @@
 @red-room: #ad4a54;
 @registration-room: #dd4876;
 @yellow-room: #e3d800;
+@keynote-room: #66ad4a;
+@locknote-room: #66ad4a;
 
 p.blue {color: #00a2ff}
 div.blue,
