--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -511,6 +511,7 @@ ul.accordion {
     .twitter {display: none;}
     .website {display: none;}
     .abstract {display: none;}
+    .bio {display: none;}
   }
   a.col:hover {
     color: #fff;
@@ -538,6 +539,12 @@ ul.accordion {
 
   .col.yellow-room {border-color: @yellow-room}
   a.col.yellow-room:hover {background: @yellow-room}
+
+  .col.keynote-room {border-color: @green-room}
+  a.col.keynote-room:hover {background: @green-room}
+
+  .col.locknote-room {border-color: @green-room}
+  a.col.locknote-room:hover {background: @green-room}
 }
 
 
