Removing Vote button and adding agenda button

--- a/layouts/partials/important-dates.html
+++ b/layouts/partials/important-dates.html
@@ -11,7 +11,7 @@
     <div class="what-now">
       <h2>What now?</h2>
 
-      <a href="/vote/" class="btn vote">Vote on Session(s)</a>
+      <a href="/agenda/" class="btn agenda">View Agenda</a>
       <a href="/tickets/" class="btn book">Purchase a Ticket</a>
     </div>
   </div>
