--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -45,6 +45,9 @@ hr {border-top: 3px solid #dcdcdc;}
   .btn.book, .btn.add-vote {background-color: @tickets}
     .btn.book:hover, .btn.add-vote:hover {background-color: darken(@tickets, 5%)}
 
+  .btn.agenda {background-color: @agenda}
+    .btn.agenda:hover {background-color: darken(@agenda, 5%)}
+
 .btn.add-vote:after, .btn.remove-vote:after {
   display: inline-block;
   margin: 0px;
