Adding the agenda

--- a/src/less/colours-and-fonts.less
+++ b/src/less/colours-and-fonts.less
@@ -15,15 +15,16 @@
 @agenda: #bcd800;
 
 // Agenda
+@aqua-room: #01b6ad;
 @blue-room: #54a6d6;
 @green-room: #66ad4a;
 @orange-room: #cd9152;
 @purple-room: #9e55c0;
 @red-room: #ad4a54;
-@registration-room: #dd4876;
+@foyer-room: #dd4876;
 @yellow-room: #e3d800;
-@keynote-room: #66ad4a;
-@locknote-room: #66ad4a;
+@keynote-room: #01b6ad;
+@locknote-room: #01b6ad;
 
 p.blue {color: #00a2ff}
 div.blue,
