--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -522,6 +522,9 @@ ul.accordion {
   }
 
   // Border Colours
+  .col.aqua-room {border-color: @aqua-room}
+  a.col.aqua-room:hover {background: @aqua-room}
+
   .col.blue-room {border-color: @blue-room}
   a.col.blue-room:hover {background: @blue-room}
 
@@ -537,17 +540,17 @@ ul.accordion {
   .col.red-room {border-color: @red-room}
   a.col.red-room:hover {background: @red-room}
 
-  .col.registration-room {border-color: @registration-room}
-  a.col.registration-room:hover {background: @registration-room}
+  .col.foyer-room {border-color: @foyer-room}
+  a.col.foyer-room:hover {background: @foyer-room}
 
   .col.yellow-room {border-color: @yellow-room}
   a.col.yellow-room:hover {background: @yellow-room}
 
-  .col.keynote-room {border-color: @green-room}
-  a.col.keynote-room:hover {background: @green-room}
+  .col.keynote-room {border-color: @keynote-room}
+  a.col.keynote-room:hover {background: @keynote-room}
 
-  .col.locknote-room {border-color: @green-room}
-  a.col.locknote-room:hover {background: @green-room}
+  .col.locknote-room {border-color: @locknote-room}
+  a.col.locknote-room:hover {background: @locknote-room}
 }
 
 
