--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -43,7 +43,7 @@
             <h3>Car</h3>
           </div>
           <div class="txt">
-            <p>Although parking is available around the university we recommend that delegates travel by train to Caulfield Railway Station and then walk to the university (about 2 minutes).</p>
+            <p>Although parking is available around the university we recommend that delegates travel by public transport.</p>
           </div>
         </div>
         <div class="col">
@@ -52,7 +52,8 @@
             <h3>Train</h3>
           </div>
           <div class="txt">
-            <p>The nearest train station is Caulfield and Monash University is a 2 minute walk from there.</p>
+            <p>The nearest train station is Caulfield and Monash University is a 2 minute walk from there. Four lines stop at the station: Cranbourne, Dandenong, Frankston and Pakenham.
+</p>
           </div>
         </div>
         <div class="col">
@@ -61,7 +62,7 @@
             <h3>Tram</h3>
           </div>
           <div class="txt">
-            <p><a href="http://ptv.vic.gov.au/route/view/761" target="_blank">Tram route 3</a> stops at the Caulfield station.</p>
+            <p><a href="http://ptv.vic.gov.au/route/view/761" target="_blank">Tram route 3/3a</a> stops at the Caulfield station.</p>
           </div>
         </div>
         <div class="col">
