--- a/src/less/colours-and-fonts.less
+++ b/src/less/colours-and-fonts.less
@@ -25,6 +25,7 @@
 @yellow-room: #e3d800;
 @keynote-room: #01b6ad;
 @locknote-room: #01b6ad;
+@afterparty-room: #dd4876;
 
 p.blue {color: #00a2ff}
 div.blue,
