--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -551,6 +551,9 @@ ul.accordion {
 
   .col.locknote-room {border-color: @locknote-room}
   a.col.locknote-room:hover {background: @locknote-room}
+
+  .col.afterparty-room {border-color: @afterparty-room}
+  a.col.afterparty-room:hover {background: @afterparty-room}
 }
 
 
