--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -275,6 +275,10 @@ section.image-strip {
 section.sponsors {padding-bottom: 20px}
   section.sponsors.grey {background: #f7f7f7; padding: 26px 0}
 
+section.sponsors div.services {
+  display: inline-block
+}
+
 // DDD By Night
 section.ddd-by-night {
   height: 250px;
