--- a/layouts/partials/ddd-by-night.html
+++ b/layouts/partials/ddd-by-night.html
@@ -2,6 +2,6 @@
   <div class="content">
   <img src="/images/ddd-by-night/ddd-night-logo.png" alt="DDD By Night">
   <p>Free evening event.</p>
-  <p><a href="https://www.meetup.com/en-AU/DDD-Melbourne-By-Night/" class="btn" target="_blank">Find Out More</a></p>
+  <p><a href="https://dddbynight.dddmelbourne.com" class="btn" target="_blank">Find Out More</a></p>
   </div>
 </section>
