Minor content edits

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,7 +11,7 @@
   <section class="intro">
     <div class="container">
      <h1>DDD Melbourne is an inclusive non-profit conference for the software community.</h1><br />
-     <h1>Our goal is to create an approachable event that appeals to the whole community, especially people that don't normally get to attend or speak at conferences.<br /> See our <a href="/code-of-conduct">Code of Conduct</a>.</h1>
+     <h1>Our goal is to create an approachable event that appeals to the whole community, especially people who usually don’t have the opportunity to attend, or speak at, conferences.<br /> See our <a href="/code-of-conduct">Code of Conduct</a>.</h1>
     </div>
   </section>
 {{ else }}
