--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -189,6 +189,16 @@ header {
 }
 #clock + hr {width: 90%; max-width: 280px; margin: 0 auto}
 
+#ticketClock {
+  margin: 20px 0;
+  text-align: center;
+  line-height: 1.1;
+  display:block;
+  span {font-size: 75%; text-transform: uppercase; text-align: right; display: inline-block; margin: 0 5px; text-indent: -10px}
+  strong {font-size: 250%; letter-spacing: -1px; line-height: 1; text-indent: 0; display: block; font-family: 'Overpass Mono', monospace; font-weight: @bold; margin-bottom: 0}
+}
+#ticketClock + hr {width: 90%; max-width: 280px; margin: 0 auto}
+
 
 // Next Event
 .next-event {
