Add Talk Length to the Open Submission form

--- a/layouts/session-submission/single.html
+++ b/layouts/session-submission/single.html
@@ -25,6 +25,15 @@
                     <span class="help-block with-errors"></span>
                   </li>
                   <li class="form-group">
+                    <label for="SessionDuration">Talk Length</label>
+                    <select name="SessionDuration" id="SessionDuration">
+                      <option selected value="45">45 Minutes</option>
+                      <option value="20">20 Minutes</option>
+                    </select> 
+                    <span class="help-block with-errors"></span>
+                  </li>
+                  
+                  <li class="form-group">
                     <label for="PresenterName">Presenter name <span class="required">&#42;</span></label>
                     <input type="text" name="PresenterName" id="PresenterName" data-error="Please provide your presenter name" required />
                     <span class="help-block with-errors"></span>
